--- a/index.html
+++ b/index.html
@@ -110,16 +110,16 @@
                 <a href="index.html">HOME</a>
             </div>
             <div class="about">
-                <a href="about_us.html">ABOUT_US</a>
+                <a href="about_us.html">ABOUT US</a>
             </div> 
             <div class="contact">
-                <a href="contact_us.html">CONTACT_US</a>
+                <a href="contact_us.html">CONTACT</a>
             </div>
             <div class="vission">
-                <a href="vission_and_mission.html">VISSION AND MISSION</a>
+                <a href="vision_and_mission.html">VISION AND MISSION</a>
             </div>
             <div class="login">
-                <button><a href="login_page.html">REGISTRATION PAGE</a></button>
+                <button><a href="login_page.html">REGISTRATION</a></button>
             </div>
 
         </div>
