i updated the about page

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <a href="index.html">HOME</a>
             </div>
             <div class="about">
-                <a href="about_us.html">ABOUT US</a>
+                <a href="about.html">ABOUT US</a>
             </div> 
             <div class="contact">
                 <a href="contact_us.html">CONTACT</a>
