--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
     
 }
     a:hover{
-        color: goldenrod;
+        background-color: goldenrod;
 }
-    a:visited{
-        color: black;
-    }
+    /* a:visited{
+        color: goldenrod;
+    } */
     .main_page{
         margin-left: 450px;
         margin-top: 200px;
@@ -113,7 +113,7 @@
                 <a href="about.html">ABOUT US</a>
             </div> 
             <div class="contact">
-                <a href="contact_us.html">CONTACT</a>
+                <a href="contact.html">CONTACT</a>
             </div>
             <div class="vission">
                 <a href="vision_and_mission.html">VISION AND MISSION</a>
