i added the vision page and the registration page

--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
                 <a href="contact.html">CONTACT</a>
             </div>
             <div class="vission">
-                <a href="vision_and_mission.html">VISION AND MISSION</a>
+                <a href="vision.html">VISION AND MISSION</a>
             </div>
             <div class="login">
-                <button><a href="login_page.html">REGISTRATION</a></button>
+                <button><a href="login.html">REGISTRATION</a></button>
             </div>
 
         </div>
