--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
 </style>
     <body>
         <div class="semi_page">
-            <b>CONTACT US</b>
+            <b>CONTACT_US</b>
         </div>
         <div class="page">
             <div class="page_left">
